[package]
name = "tiny-terminal-snake"
version = "0.1.4"
authors = ["ccQpein"]
edition = "2018"
description = "tiny snake game in terminal"
repository = "https://github.com/ccqpein/snake-game"
license = "MIT"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7"
termion = "1"
