[package]
name = "tiny-terminal-snake"
version = "0.2.1"
authors = ["ccQpein"]
edition = "2021"
description = "tiny snake game in terminal"
repository = "https://github.com/ccqpein/snake-game"
license = "MIT"
readme = "README.md"
categories = ["games"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7"
termion = "2"

# GUI support
#druid = { git = "https://github.com/linebender/druid.git" }
druid = "0.7.0"

# cli support
clap = { version = "3.0.0-rc.8", features = ["derive"] }
proc-macro2 = "1.0.34"
